# adsp

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  tasks.py
alembic/: env.py
alembic/versions/: 683be43da148_initial_migration.py  a7a0e66e995f_initial_migration.py  dd15df06140d_change_raw_data_to_jsonb.py
app/: main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: stop_searches.py
app/api/v1/: api.py
app/core/: celery_app.py  config.py  http_client.py
app/db/: base.py  session.py
app/models/: failed_row.py  item.py  stop_search.py
app/schemas/: item.py  stop_search.py
app/services/: csv_handler.py  data_cleaner.py  importer.py  police_api.py  stop_search_service.py
app/tasks/: populate_stop_searches.py  stop_search_tasks.py
data/: sample_data.csv
docker/: Dockerfile  prometheus.yml
scripts/: initial_load.py  trigger_populate_stop_searches.py  trigger_remediation.py  trigger_stop_search_ingestion.py
tests/: conftest.py  test_celery_app.py  test_config.py  test_coverage_gaps.py  test_csv_handler.py  test_db.py  test_http_client.py  test_importer.py  test_main.py  test_police_api.py  test_police_api_coverage.py  test_police_api_dates.py  test_schemas.py  test_tasks.py
tests/core/: test_celery_app.py  test_config.py  test_http_client.py
tests/db/: test_session.py
tests/services/: test_csv_handler.py  test_data_cleaner.py  test_stop_search_service.py  test_stop_search_service_dates.py  test_stop_search_service_remediation.py
tests/tasks/: test_stop_search_tasks.py
(+4 files in other folders)
